[package]
name = "prtgn_encoding"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0"
description = "Encoding and decoding for the PRTGN file format"
homepage = "https://prtgn-development-team.github.io"
repository = "https://github.com/PRTGN-Development-Team/PRTGN_encoding"
readme = "README.md"
keywords = ["PRTGN", "File-Format", "Encoding", "Decoding"]
categories = ["command-line-interface", "encoding", "filesystem"]
exclude = [".github", "target"]
documentation = "docs.rs/prtgn_encoding"

[dependencies]

